# sandcat

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Trunk.toml  emoji.json  index.html  robots.txt
.cargo/: config  config.toml
abi/: Cargo.toml
abi/src/: lib.rs
abi/src/model/: group.rs  message.rs  mod.rs  page.rs  seq.rs  user.rs
abi/src/state/: mod.rs
api/: Cargo.toml
api/src/: friend.rs  group.rs  message.rs  user.rs
api/src/http/: file.rs  friend.rs  group.rs  msg.rs  seq.rs  user.rs
assets/css/: home.css  index.css  left.css  login.css  register.css  right.css
components/: Cargo.toml
components/src/: action.rs  avatar.rs  change_pwd.rs  constant.rs  dialog.rs  lib.rs  notification.rs  phone_call.rs  select_friends.rs  self_info.rs  top_bar.rs
components/src/call/: mod.rs  phone_call.rs
components/src/left/: add_friend.rs  contacts.rs  list_item.rs  mod.rs  right_click_panel.rs  top.rs  user_info.rs
components/src/left/conv_com/: conversations.rs  handle_group.rs  handle_msg.rs  handle_offline_msg.rs  mod.rs
components/src/right/: emoji.rs  friend_card.rs  friendship_list.rs  mod.rs  msg_item.rs  msg_list.rs  msg_right_click.rs  postcard.rs  recorder.rs  sender.rs  set_drawer.rs  set_window.rs  setting.rs  util.rs
components/src/right/msg_item/: component.rs  mod.rs  related_msg.rs
components/src/right/sender/: component.rs  emoji.rs  mod.rs
db/: Cargo.toml
db/src/: conversations.rs  friends.rs  friendships.rs  group_members.rs  group_msg.rs  groups.rs  lib.rs  messages.rs  seq.rs  users.rs
db/src/impls/: mod.rs
db/src/impls/indexed_db/: conv.rs  friend.rs  friend_ship.rs  group.rs  group_members.rs  group_msg.rs  message.rs  mod.rs  repository.rs  seq.rs  user.rs
i18n/: Cargo.toml
i18n/src/: lib.rs
i18n/src/en_us/: mod.rs
i18n/src/zh_cn/: mod.rs
icons/: Cargo.toml
icons/src/: lib.rs
pages/: Cargo.toml
pages/src/: home.rs  login.rs  main.rs  oauth2.rs  register.rs
rfcs/: todo.md
sandcat-sdk/: Cargo.toml
sandcat-sdk/src/: lib.rs
sandcat-sdk/src/api/: file.rs  friend.rs  group.rs  message.rs  mod.rs  oauth2.rs  seq.rs  user.rs
sandcat-sdk/src/api/http/: file.rs  friend.rs  group.rs  mod.rs  msg.rs  oauth2.rs  seq.rs  user.rs
sandcat-sdk/src/db/: conversations.rs  friends.rs  friendships.rs  group_members.rs  group_msg.rs  groups.rs  messages.rs  mod.rs  offline_time.rs  seq.rs  users.rs  voice.rs
sandcat-sdk/src/db/impls/indexed_db/: conv.rs  friend.rs  friend_ship.rs  group.rs  group_members.rs  group_msg.rs  message.rs  mod.rs  offline_time.rs  repository.rs  seq.rs  user.rs  voice.rs
sandcat-sdk/src/error/: api_err.rs  mod.rs
sandcat-sdk/src/model/: configurations.rs  conversation.rs  file_msg.rs  friend.rs  group.rs  message.rs  mod.rs  notification.rs  offline_time.rs  page.rs  seq.rs  user.rs  voice.rs
sandcat-sdk/src/pb/: message.rs
sandcat-sdk/src/state/: mod.rs
src/: main.rs
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: message.rs  mod.rs
src/api/: friend.rs  group.rs  message.rs  mod.rs  seq.rs  user.rs
src/api/group/: mod.rs
src/api/http/: file.rs  friend.rs  group.rs  mod.rs  msg.rs  seq.rs  user.rs
src/api/user/: mod.rs
src/components/: action.rs  dialog.rs  mod.rs  phone_call.rs  self_info.rs  top_bar.rs
src/components/left/: add_conv.rs  add_friend.rs  contacts.rs  list_item.rs  messages.rs  mod.rs  right_click_panel.rs  select_friends.rs  top.rs  user_info.rs
src/components/left/conv_com/: conversations.rs  handle_group.rs  handle_msg.rs  handle_offline_msg.rs  mod.rs
src/components/right/: emoji.rs  friend_card.rs  friendship_list.rs  mod.rs  msg_item.rs  msg_list.rs  postcard.rs  sender.rs  set_drawer.rs  set_window.rs  setting.rs
src/context/: mod.rs
src/db/: config.rs  conv.rs  conversations.rs  current_item.rs  db.rs  friend.rs  friend_ship.rs  friends.rs  friendships.rs  group.rs  group_members.rs  group_msg.rs  groups.rs  message.rs  messages.rs  mod.rs  repository.rs  seq.rs  user.rs  users.rs
src/db/impls/: mod.rs
src/db/impls/indexed_db/: conv.rs  current_item.rs  friend.rs  friend_ship.rs  group.rs  group_members.rs  group_msg.rs  message.rs  mod.rs  repository.rs  seq.rs  user.rs
src/error/: mod.rs
src/i18n/: mod.rs
src/i18n/en_us/: mod.rs
src/i18n/zh_cn/: mod.rs
src/icons/: mod.rs
src/model/: conversation.rs  friend.rs  group.rs  group_msg.rs  message.rs  mod.rs  notification.rs  seq.rs  user.rs
src/pages/: home.rs  login.rs  mod.rs  register.rs
src/pages/home_page/: home.rs  mod.rs
src/pb/: message.rs
src/state/: mod.rs
src/utils/: mod.rs
src/web_rtc/: mod.rs
src/ws/: manager.rs  mod.rs
utils/: Cargo.toml
utils/src/: lib.rs
web_rtc/: Cargo.toml
web_rtc/src/: lib.rs
ws/: Cargo.toml
ws/src/: manager.rs
