[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4.6"
prost = "0.12.3"
prost-types = "0.12.3"
serde = "1"
yewdux = { version = "0.10.0", features = ["doctests"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
i18n = { path = "../i18n" }
utils = { path = "../utils" }

[dependencies.chrono]
version = "0.4"
features = ["wasmbind", "js-sys", "serde"]
