[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
gloo = "0.11.0"
gloo-net = "0.5.0"
log = "0.4.6"
serde = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"


sandcat-sdk = { path = "../sandcat-sdk" }

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = ["File", "Response"]
