[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.16.0"
gloo = "0.11.0"
gloo-net = "0.5.0"
futures-channel = "0.3.29"
indexmap = { version = "2.2.3" }
log = "0.4.6"
js-sys = "0.3.55"
nanoid = "0.4.0"
serde_json = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
yewdux = { version = "0.10.0", features = ["doctests"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"


sandcat-sdk = { path = "../sandcat-sdk" }
i18n = { path = "../i18n" }
icons = { path = "../icons" }
utils = { path = "../utils" }
web_rtc = { path = "../web_rtc" }
ws = { path = "../ws" }
base64 = "0.22.1"

[dependencies.chrono]
version = "0.4"
features = ["wasmbind", "js-sys", "serde"]

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = [
    "Event",
    "HtmlAudioElement",
    "HtmlVideoElement",
    "MediaRecorder",
    "MediaRecorderOptions",
    "MediaStream",
    "MediaStreamTrack",
    "MouseEvent",
    "RtcIceCandidateInit",
    "RtcPeerConnection",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSignalingState",
    "RtcRtpSender",
    "Clipboard",
    "HtmlDivElement",
    "HtmlFormElement",
    "HtmlDocument",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlTextAreaElement",
    "HtmlParagraphElement",
    "HtmlImageElement",
    "HtmlDialogElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Animation",
    "CssAnimation",
    "Node",
    "Selection",
    "DomRectList",
    "DomRect",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "SubmitEvent",
    "KeyEvent",
    "KeyboardEvent",
    "KeyboardEventInit",
    "ClipboardEvent",
    "Text",
    "BlobEvent",
    "Range",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomTokenList",
    "CssStyleDeclaration",
    "Notification",
    "NotificationOptions",
    "NotificationPermission",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
]
