[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
futures-channel = "0.3.29"
indexmap = { version = "2.2.3" }
js-sys = { version = "0.3" }
log = "0.4.6"
serde = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
yew = { version = "0.21", features = ["csr"] }

abi = { path = "../abi" }


[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = [
    "console",
    "Event",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbIndex",
    "IdbTransactionMode",
    "IdbObjectStoreParameters",
    "IdbCursorWithValue",
    "IdbCursorDirection",
    "IdbKeyRange",
    "IdbIndexParameters",
]
