[package]
name = "web_rtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = { version = "0.3" }
log = "0.4.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
yew = { version = "0.21", features = ["csr"] }

abi = { path = "../abi" }
ws = { path = "../ws" }

[dependencies.chrono]
version = "0.4"
features = ["wasmbind", "js-sys", "serde"]

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = [
    "HtmlAudioElement",
    "HtmlVideoElement",
    "RtcConfiguration",
    "RtcIceConnectionState",
    "RtcIceServer",
    "RtcPeerConnection",
    "RtcSessionDescriptionInit",
    "RtcSignalingState",
    "RtcTrackEvent",
    "RtcPeerConnectionIceEvent",
    "RtcSignalingState",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceCandidateStats",
    "RtcIceGatheringState",
]
